fix slider overlap

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -268,9 +268,14 @@ section .section-copy {
 	font-size: 14px;
 }
 
-.content-slider img {
-  display: block;
-  width: 100%;
+.content-slider {
+  a {
+    position: relative;
+  }
+  img {
+    display: block;
+    width: 100%;
+  }
 }
 
 .slider:hover > .grey-container {
